Added prompt for journal entry; fixed source code: const, tabs and spacing; improved man page

--- a/isscrolls.1
+++ b/isscrolls.1
@@ -178,7 +178,9 @@ history.
 .It Ic save
 Saves the current character including an active vow, journey, fight, or delve.
 .It Ic journal Cm text
-Writes an entry to a journal file (with the specified text).
+Writes
+.Cm text
+as an entry to a journal file.
 This command can be abbreviated to 'j'.
 .Pp
 The file will be in the isscrolls directory.
