Forgot to add x to synposis

--- a/isscrolls.1
+++ b/isscrolls.1
@@ -21,7 +21,7 @@
 .Nd Player toolkit for the Ironsworn Family Tabletop RPG
 .Sh SYNOPSIS
 .Nm isscrolls
-.Op Fl bc
+.Op Fl bcx
 .Sh DESCRIPTION
 .Nm
 is a toolkit for players of the Ironsworn tabletop RPG.
