--- a/isscrolls.1
+++ b/isscrolls.1
@@ -26,9 +26,9 @@
 .Nm
 is a toolkit for players of the Ironsworn tabletop RPG.
 It supports classic Ironsworn, Delve, Starforged and Sundered Isles.
-It is intended for both solo and co-op play and allows to track your
+It is intended for both solo and co-op play and allows tracking your
 character's progress including vows, roll on adventure and exploration moves,
-tracks progress for fights, journeys and expeditions and provides results
+tracks progress for fights, journeys, and expeditions and provides results
 from the static oracle tables from the official rulebook.
 The options are as follows:
 .Bl -tag -width Ds
@@ -93,7 +93,7 @@ See the section below for more information how the commands work.
 .Nm
 is best used if you generate a character with the
 .Ic create
-command and load it afterwards with the
+command and load it afterward with the
 .Ic cd
 command.
 Once you load a character, their current stats will be printed which looks
@@ -126,7 +126,7 @@ Debilities are shown in the next two lines, a 0 means that the character
 does not suffer from this particular debility while a 1 means that they
 suffer from it.
 .Pp
-The last line shows the character's progress for bonds, quests and
+The last line shows the character's progress for bonds, quests and,
 discoveries including the progress on the legacy tracks.
 .Ss Vows, Expeditions, Journeys, Fights and Delve
 As soon as a character starts one of them, the prompt changes and
@@ -161,7 +161,7 @@ The following sections shows all commands that can be entered on
 .Nm
 command prompt.
 .Ss General Commands
-This sub-section shows general commands that are not dice rolls and game moves.
+This subsection shows general commands that are not dice rolls and game moves.
 .Bl -tag
 .It Ic cd Op name
 Load the character
@@ -276,7 +276,7 @@ Otherwise, the name will be asked interactively.
 Decrease the character's value
 .Cm stat .
 You can also decrease the progress of a fight or a journey.
-Hereby, the progress is automatically decreased according on the rank.
+Hereby, the progress is automatically decreased according to the rank.
 You can also decrease the progress of or the quest,
 discovery and failure track.
 .Pp
@@ -434,7 +434,7 @@ Roll a
 .Em Face Danger
 move using the character's stat named
 .Cm stat .
-This move can done using the following stats: edge, heart, iron, shadow, and
+This move can be done using the following stats: edge, heart, iron, shadow, and
 wits.
 An additional
 .Op bonus
@@ -444,7 +444,7 @@ Roll a
 .Em Secure an Advantage
 move using the character's stat named
 .Cm stat .
-This move can done using the following stats: edge, heart, iron, shadow, and
+This move can be done using the following stats: edge, heart, iron, shadow, and
 wits.
 An additional
 .Op bonus
@@ -501,7 +501,7 @@ Roll an
 .Em Undertake an Expedition
 move using the character's stat named
 .Cm stat .
-This move can done using the following stats: edge, shadow, and wits.
+This move can be done using the following stats: edge, shadow, and wits.
 Provide an optional
 .Op bonus .
 .Pp
@@ -549,7 +549,7 @@ Roll a
 .Em Compel
 move using the character's stat named
 .Cm stat .
-This move can done using the following stats: heart, iron, and shadow.
+This move can be done using the following stats: heart, iron, and shadow.
 An additional
 .Op bonus
 can be provided.
@@ -574,7 +574,7 @@ An additional
 can be provided.
 Note that
 .Nm
-does not ask your for a rank and does not track connections, this is up to
+does not ask you for a rank and does not track connections, this is up to
 the player.
 .It Ic forgeabond Op bonus
 Roll a
@@ -612,7 +612,7 @@ Roll an
 .Em Enter the Fray
 move using the character's stat named
 .Cm stat .
-This move can done using the following stats: heart, wits, and shadow.
+This move can be done using the following stats: heart, wits, and shadow.
 .Pp
 In case this is the first move in a fight,
 .Nm
@@ -631,7 +631,7 @@ Roll an
 .Em Gain Ground
 move using the character's stat named
 .Cm stat .
-This move can done using all stats.
+This move can be done using all stats.
 An additional
 .Op bonus
 can be provided.
@@ -640,7 +640,7 @@ Roll an
 .Em React under Fire
 move using the character's stat named
 .Cm stat .
-This move can done using all stats.
+This move can be done using all stats.
 An additional
 .Op bonus
 can be provided.
@@ -658,7 +658,7 @@ Roll a
 .Em Strike
 move using the character's stat named
 .Cm stat .
-This move can done using the following stats: iron, and edge.
+This move can be done using the following stats: iron, and edge.
 An additional
 .Op bonus
 can be provided.
@@ -667,7 +667,7 @@ Roll a
 .Em Clash
 move using the character's stat named
 .Cm stat .
-This move can done using the following stats: iron, and edge.
+This move can be done using the following stats: iron, and edge.
 An additional
 .Op bonus
 can be provided.
@@ -676,7 +676,7 @@ Roll a
 .Em Battle
 move using the character's stat named
 .Cm stat .
-This move can done using the following stats: edge, heart, iron, shadow, and
+This move can be done using the following stats: edge, heart, iron, shadow, and
 wits.
 An additional
 .Op bonus
@@ -802,7 +802,7 @@ Roll a
 .Em Delve the Depths
 move using the character's stat named
 .Cm stat .
-This move can done using edge, shadow, and wits.
+This move can be done using edge, shadow, and wits.
 An additional
 .Op bonus
 can be provided.
@@ -820,7 +820,7 @@ move.
 .It Ic escapethedepths Cm stats Op bonus
 Roll an
 .Em Escape the Depths
-This move can done using edge, heart, iron, shadow, and wits.
+This move can be done using edge, heart, iron, shadow, and wits.
 An additional
 .Op bonus
 can be provided.
