Break long line and make lint happy
Date needs to leading zero

--- a/isscrolls.1
+++ b/isscrolls.1
@@ -14,7 +14,7 @@
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
 .\"
-.Dd July 09, 2025
+.Dd July 9, 2025
 .Dt ISSCROLLS 1
 .Sh NAME
 .Nm isscrolls
@@ -195,8 +195,8 @@ This command can be abbreviated to 'j'.
 .Pp
 The file will be in the isscrolls directory.
 There will be a separate file for each character.
-If the current character is deleted and a new character is created with the same name,
-a new journal file will be created.
+If the current character is deleted and a new character is created with the same
+name, a new journal file will be created.
 .El
 .Ss Dice Rolls
 The following commands can be used to roll dice according to the game's
