Document the new command

--- a/isscrolls.1
+++ b/isscrolls.1
@@ -1,5 +1,5 @@
 .\"
-.\" Copyright (c) 2021-25 Matthias Schmidt
+.\" Copyright (c) 2021-26 Matthias Schmidt
 .\"
 .\" Permission to use, copy, modify, and distribute this software for any
 .\" purpose with or without fee is hereby granted, provided that the above
@@ -14,7 +14,7 @@
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
 .\"
-.Dd July 9, 2025
+.Dd February 18, 2026
 .Dt ISSCROLLS 1
 .Sh NAME
 .Nm isscrolls
@@ -681,6 +681,10 @@ wits.
 An additional
 .Op bonus
 can be provided.
+.It Ic getinitiative
+Give the character initiative/let them take control.
+This can be usefull when a player rolls a weak hit on
+.Em Enter the Fray .
 .El
 .Ss Quest Moves
 The commands represent important moves characters make during their quest.
