Emphathize the games' names

--- a/isscrolls.1
+++ b/isscrolls.1
@@ -24,8 +24,13 @@
 .Op Fl bcx
 .Sh DESCRIPTION
 .Nm
-is a toolkit for players of the Ironsworn tabletop RPG.
-It supports classic Ironsworn, Delve, Starforged and Sundered Isles.
+is a toolkit for players of the
+.Em Ironsworn
+tabletop RPG.
+It supports classic
+.Em Ironsworn , Delve , Starforged ,
+and
+.Em Sundered Isles .
 It is intended for both solo and co-op play and allows tracking your
 character's progress including vows, roll on adventure and exploration moves,
 tracks progress for fights, journeys, and expeditions and provides results
@@ -67,11 +72,17 @@ thus any shortcut or character combination that work with a common
 shell also work for the built-in shell.
 .Ss Information for general Gameplay
 .Nm
-supports all games of the Ironsworn family and allows players to freely
+supports all games of the
+.Em Ironsworn
+family and allows players to freely
 use moves or actions from all of them.
 Therefore, depending on the game you own you might see statistics or
 information that belong to another game, e.g., characters get experience
-points in classic Ironsworn for fulfilling vows while in Starforged they
+points in classic
+.Em Ironsworn
+for fulfilling vows while in
+.Em Starforged
+they
 get experience via the so called
 .Em legacy track .
 Both ways are supported by
@@ -427,7 +438,8 @@ Deletes an existing note.
 Adventure Moves are used as your character travels the Ironlands, investigates
 situations and deals with threats.
 Exploration moves are the same concept, however, the new name was introduced
-with Ironsworn Starforged.
+with
+.Em Ironsworn Starforged .
 .Bl -tag
 .It Ic facedanger Cm stat Op bonus
 Roll a
@@ -683,7 +695,7 @@ An additional
 can be provided.
 .It Ic getinitiative
 Give the character initiative/let them take control.
-This can be usefull when a player rolls a weak hit on
+This can be useful when a player rolls a weak hit on
 .Em Enter the Fray .
 .El
 .Ss Quest Moves
