Reflect resupply changes in manpage

--- a/isscrolls.1
+++ b/isscrolls.1
@@ -14,7 +14,7 @@
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
 .\"
-.Dd February 18, 2026
+.Dd February 23, 2026
 .Dt ISSCROLLS 1
 .Sh NAME
 .Nm isscrolls
@@ -490,6 +490,7 @@ move.
 Roll a
 .Em Resupply
 move.
+This move can be done using the following stats: heart, iron, shadow, and wits.
 An additional
 .Op bonus
 can be provided.
